Chores: update content CV

--- a/assets/CV.tex
+++ b/assets/CV.tex
@@ -63,7 +63,7 @@ Final-year CS student with Python scripting, AI, and cybersecurity experience, s
 \vspace{-1mm}
 \section*{Teaching Assistantships}
 \begin{itemize}
-    \item OOP \quad • \quad Linear Algebra \quad • \quad Software Design \quad • \quad Database Systems
+    \item PF \quad • \quad OOP \quad • \quad Linear Algebra \quad • \quad Software Design \quad • \quad Database Systems
 \end{itemize}
 
 \vspace{-1mm}
